--- a/assets/global.css
+++ b/assets/global.css
@@ -25,19 +25,21 @@ body {
   letter-spacing: -0.13rem;
   line-height: 1.2;
   margin-top: -10px;
-  white-space: normal; /* ganz normaler Zeilenumbruch */
+  white-space: normal; 
+  word-break: break-word;
 }
 
-/* Trick: details inline-block, summary inline */
+
 .opener-text details {
   display: inline-block;
-  vertical-align: baseline;  /* bleibt auf Textlinie */
+  vertical-align: baseline; 
   margin: 0;
   padding: 0;
 }
 
 .opener-text summary {
   display: inline;
+  list-style: none;
   margin: 0;
   padding: 0;
   font: inherit;
@@ -45,14 +47,28 @@ body {
   white-space: normal;
 }
 
-/* Marker killen */
+.media-wrapper {
+  position: relative;
+  width: 90%;
+  aspect-ratio: 4 / 3;
+  margin: 10px auto;
+}
+
+.media-wrapper img,
+.media-wrapper video {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  top: 0;
+  left: 0;
+
 .opener-text summary::-webkit-details-marker,
 .opener-text summary::marker {
   display: none;
   content: "";
 }
 
-/* Verhalten */
 .opener-text details[open] summary {
   font-style: italic;
 }
