global.css aktualisieren

--- a/assets/global.css
+++ b/assets/global.css
@@ -54,7 +54,7 @@ body {
   white-space: normal;
 }
 
-.service-wrapper {
+.media-wrapper {
   position: relative;
   width: 90%;
   aspect-ratio: 4 / 3;
