--- a/assets/global.css
+++ b/assets/global.css
@@ -37,25 +37,21 @@ body {
 }
 
 
-.service-text details {
-  display: inline-block;
-  vertical-align: baseline; 
-  margin: 0;
-  padding: 0;
+.opener-text details {
+  display: inline;
 }
 
-.service-text summary {
+.opener-text summary {
   display: inline;
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  font: inherit;
   cursor: pointer;
-  white-space: normal;
+  list-style: none;
+}
+
+.opener-text summary::-webkit-details-marker {
+  display: none;
 }
 
 .media-wrapper {
-  position: relative;
   width: 90%;
   aspect-ratio: 4 / 3;
   margin: 10px auto;
@@ -63,25 +59,17 @@ body {
 
 .media-wrapper img,
 .media-wrapper video {
-  position: absolute;
   width: 100%;
   height: 100%;
   object-fit: cover;
-  top: 0;
-  left: 0;
+  display: block;
 }
 
-.opener-text summary::-webkit-details-marker,
-.opener-text summary::marker {
-  display: none;
-  content: "";
-}
-
-.opener-text details[open] summary {
+.service-text details[open] summary {
   font-style: italic;
 }
 
-.opener-text summary:hover {
+.service-text summary:hover {
   text-decoration: underline;
   font-style: italic;
 }
