--- a/assets/global.css
+++ b/assets/global.css
@@ -7,12 +7,26 @@ body {
     background:  white;
     display: flex;
     flex-direction: column;
-    font-family: Helvetica, Arial, sans-serif;
+    font-family: 'Moritz Condensed', Helvetica, Arial, sans-serif;
     color: black;
     padding-top: 140px;
     overflow-x: hidden;
     margin: 0;
 } 
+
+@font-face {
+  font-family: 'Moritz Condensed';
+  src: url('/assets/moritz-condensed-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Moritz Neue Condensed Bold';
+  src: url('/assets/moritz-neue-condensed-bold.woff') format('woff');
+  font-weight: bold;
+  font-style: normal;
+}
 
 ::selection {
     color: yellow;
@@ -20,17 +34,19 @@ body {
 }
 
 .opener-text {
+  font-family: 'Moritz Neue Condensed Bold';
   font-size: 3.1rem;
   font-weight: 400;
-  letter-spacing: -0.13rem;
+  letter-spacing: -0.3rem;
   line-height: 1.2;
   margin-top: -10px;
 }
 
 .service-text {
-  font-size: 2.6rem;
+  font-family: 'Moritz Neue Condensed Bold';
+  font-size: 2.3rem;
   font-weight: 400;
-  letter-spacing: -0.13rem;
+  letter-spacing: -0.1rem;
   line-height: 1.2;
   white-space: normal; 
   word-break: break-word;
