--- a/assets/global.css
+++ b/assets/global.css
@@ -7,7 +7,7 @@ body {
     background:  white;
     display: flex;
     flex-direction: column;
-    font-family: 'Moritz Condensed', Helvetica, Arial, sans-serif;
+    font-family: Helvetica, Arial, sans-serif;
     color: black;
     padding-top: 140px;
     overflow-x: hidden;
@@ -20,7 +20,6 @@ body {
 }
 
 .opener-text {
-  font-family: 'Moritz Neue Condensed Bold';
   font-size: 3.1rem;
   font-weight: 400;
   letter-spacing: -0.16rem;
@@ -29,7 +28,6 @@ body {
 }
 
 .service-text {
-  font-family: 'Moritz Neue Condensed Bold';
   font-size: 2.3rem;
   font-weight: 400;
   letter-spacing: -0.1rem;
