--- a/assets/global.css
+++ b/assets/global.css
@@ -33,10 +33,8 @@ body {
   letter-spacing: -0.1rem;
   line-height: 1.2;
   white-space: normal; 
-  hyphens: auto; 
   margin-bottom: 3rem;
 }
-
 
 .service-text details {
   display: inline;
@@ -50,6 +48,15 @@ body {
 
 .service-text summary::-webkit-details-marker {
   display: none;
+}
+
+.service-text details[open] {
+  display: inline;
+}
+
+.service-text details[open] > * {
+  display: inline;
+  white-space: normal;
 }
 
 .service-text details[open] summary {
