--- a/assets/global.css
+++ b/assets/global.css
@@ -23,18 +23,21 @@ body {
   font-size: 3.1rem;
   font-weight: 400;
   letter-spacing: -0.16rem;
-  line-height: 1.2;
+  line-height: 1.1;
   margin-top: -10px;
 }
 
 .service-text {
-  font-size: 2.3rem;
+  font-size: 2.6rem;
   font-weight: 400;
-  letter-spacing: -0.1rem;
+  letter-spacing: -0.13rem;
   line-height: 1.2;
   white-space: normal; 
+  word-break: break-word;
+  hyphens: auto;
   margin-bottom: 3rem;
 }
+
 
 .service-text details {
   display: inline;
@@ -46,17 +49,24 @@ body {
   list-style: none;
 }
 
+
+.media-inline {
+  display: inline-block;
+  width: 90%;
+  aspect-ratio: 4 / 3;
+  vertical-align: middle;
+}
+
+.media-inline img,
+.media-inline video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
+}
+
 .service-text summary::-webkit-details-marker {
   display: none;
-}
-
-.service-text details[open] {
-  display: inline;
-}
-
-.service-text details[open] > * {
-  display: inline;
-  white-space: normal;
 }
 
 .service-text details[open] summary {
@@ -67,6 +77,7 @@ body {
   text-decoration: underline;
   font-style: italic;
 }
+
 
 main {
     padding-left: 10px;
