--- a/assets/global.css
+++ b/assets/global.css
@@ -91,7 +91,8 @@ main {
 .name a {
     margin-bottom: 0;
     color: inherit;
-    font-size: 1.5rem;
+    font-size: 2.6rem;
+    padding-bottom: 3rem;
 }
 
 .contact-details a {
