--- a/assets/global.css
+++ b/assets/global.css
@@ -88,11 +88,24 @@ main {
     gap: 10px;
 }
 
+.name {
+  font-size: 2.6rem;
+  font-weight: 400;
+  letter-spacing: -0.13rem;
+  line-height: 1.2;
+  white-space: normal;
+  padding-bottom: 3rem;
+}
+    
 .name a {
     margin-bottom: 0;
     color: inherit;
-    font-size: 2.6rem;
-    padding-bottom: 3rem;
+    text-decoration: none;
+}
+
+.name a:hover{
+    text-style: italic;
+    text-decoration: underline;
 }
 
 .contact-details a {
@@ -108,7 +121,6 @@ main {
   transition: opacity 0.2s ease;
   z-index: -1;
 }
-
 
 .expand-section-toggle:nth-of-type(odd) {
   transform: rotate(6deg);
