--- a/assets/global.css
+++ b/assets/global.css
@@ -368,13 +368,13 @@ input:focus, select:focus {
     align-items: center;
     justify-content: center;
     width: 230px;
+    max-height: 60px;
     margin-top: 30px;
     background: #f8f8f8;
     color: black;
     font-size: 1rem;
     font-weight: 500;
     padding: 12px 20px;
-    border: 2px solid #d6d6d6;
     border-radius: 12px;
     cursor: pointer;
     text-decoration: none;
