--- a/assets/global.css
+++ b/assets/global.css
@@ -76,6 +76,7 @@ body {
 
 .category details {
   display: block;
+  margin-left: 10px;
 }
 
 .category summary {
@@ -83,6 +84,7 @@ body {
   display: block;
   font: inherit;
   cursor: pointer;
+  margin-left: 10px;
   text-decoration: underline;
 }
 
@@ -421,6 +423,14 @@ input:focus, select:focus {
         padding-left: 20px;
         padding-right: 20px;
     }
+    
+    .category details {
+  margin-left: 20px;
+}
+
+.category summary {
+  margin-left: 20px;
+}
 
     .content {
         margin-left: 20px;
