--- a/assets/global.css
+++ b/assets/global.css
@@ -76,10 +76,11 @@ body {
 
 .category {
     font-size: 2.6rem;
+    letter-spacing: -0.13rem;
     }
 
 .category details {
-  margin-top: 20px;
+  margin-top: 60px;
   display: block;
   margin-left: 10px;
 }
