--- a/assets/global.css
+++ b/assets/global.css
@@ -75,7 +75,8 @@ body {
 }
 
 .category {
-    font-size: 2.6rem;
+    font-size: 1.9rem;
+    min-height: 40px;
     }
 
 .category details {
@@ -89,6 +90,7 @@ body {
   cursor: pointer;
   margin-left: 10px;
   text-decoration: underline;
+  margin-bottom: 20px;
 }
 
 .category summary::-webkit-details-marker,
@@ -102,13 +104,6 @@ body {
   text-decoration: underline;
 }
 
-.category details[open] {
-  padding-top: 100px;
-}
-
-.category details:not([open]) summary {
-  margin-bottom: 10px;
-}
 
 .category summary:hover {
   font-style: italic;
