--- a/assets/global.css
+++ b/assets/global.css
@@ -26,6 +26,7 @@ body {
   line-height: 1.1;
   margin-top: -10px;
 }
+
 .service-text {
   font-size: 2.6rem;
   font-weight: 400;
@@ -75,9 +76,6 @@ body {
 
 .category {
   font-size: 2.6rem;
-  font-weight: 400;
-  letter-spacing: -0.13rem;
-  line-height: 1.2;
   white-space: normal;  
   margin-bottom: 3rem;
   text-decoration: underline;
@@ -93,7 +91,7 @@ body {
 
 .category summary {
   display: inline;
-  margin: 0;
+  margin-left: 10px;
   padding: 0;
   font: inherit;
   cursor: pointer;
