global.css aktualisieren

--- a/assets/global.css
+++ b/assets/global.css
@@ -44,7 +44,7 @@ main {
   font-weight: 400;
   letter-spacing: -0.1rem;
   line-height: 1.1;
-  margin-top: -20px;
+  margin-top: -2.4rem;
 }
 
 .service-text {
