--- a/assets/global.css
+++ b/assets/global.css
@@ -9,6 +9,7 @@ body {
     flex-direction: column;
     font-family: Helvetica, Arial, sans-serif;
     color: black;
+    -webkit-text-size-adjust: 100%;
     padding-top: 150px;
     overflow-x: hidden;
     margin: 0;
