global.css aktualisieren

--- a/assets/global.css
+++ b/assets/global.css
@@ -21,25 +21,11 @@ body {
     background: red;
 }
 
-#scroll-bg {
-  position: relative;   
-  display: block;
-  width: 300px;          
-  max-width: 90%;
-  height: auto;
-  margin: 50px auto;     
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center;
-  opacity: 0;           
-}
-
 main {
     padding-left: 10px;
     padding-right: 10px;
     flex: 1;
     min-height: 100vh
-    z-index: 1;
 }
 
 .projects-container {
@@ -47,6 +33,7 @@ main {
     display: flex;
     flex-direction: column;
     gap: 40px;
+    min-height: 100vh
 }
 
 .combined-container {
